<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_details_label">Details</string>
    <string name="dream_title">Dream Title</string>
    <string name="dream_date">Dream Date</string>
    <string name="dream_realized_label">Realized</string>
    <string name="dream_deferred_label">Deferred</string>
    <string name="dream_entry_0_button_text">Dream Revealed</string>
    <string name="dream_entry_1_button_text">Dream Entry 1</string>
    <string name="dream_entry_2_button_text">Dream Entry 2</string>
    <string name="dream_entry_3_button_text">Dream Entry 3</string>
    <string name="dream_entry_4_button_text">Dream Realized</string>
    <string name="dream_deferred_button_text">Dream Deferred</string>
    <string name="dream_realized_button_text">Dream Realized</string>
    <string name="dream_icon">Dream icon</string>
    <string name="dream_photo_desc">Dream photo</string>
    <string name="share_dream_desc">Share dream</string>

    <string name="new_dream">New Dream</string>
    <string name="new_comment_placeholder">Enter a new comment</string>

    <string name="dream_summary"># %1$s
      %2$s
    </string>
    <string name="dream_summary_subject">Dream Summary</string>
    <string name="send_summary">Send dream summary via</string>

    <string name="nav_all_dreams">All Dreams</string>
    <string name="nav_active_dreams">Active Dreams</string>
    <string name="nav_realized_dreams">Realized Dreams</string>
    <string name="nav_deferred_dreams">Deferred Dreams</string>
</resources>
